@@ -1,0 +1,7 @@
+CORE
+itor1.sv
+--module main --bound 0
+^EXIT=0$
+^SIGNAL=0$
+--
+^warning: ignoring
